# skyll

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  ranking.md  references.md  sources.md
registry/: README.md  SKILLS.md
skyll/: __init__.py  client.py  models.py
src/: __init__.py  main.py  mcp_server.py
src/api/: __init__.py  routes.py
src/cache/: __init__.py  base.py  memory.py
src/clients/: __init__.py  github.py  skillssh.py
src/core/: __init__.py  models.py  parser.py  service.py
src/ranking/: __init__.py  base.py  hybrid.py  rankers.py  relevance.py  semantic.py
src/sources/: __init__.py  awesome_list.py  base.py  registry.py  skillssh.py
tests/: __init__.py  test_cache.py  test_mcp_validation.py  test_parser.py  test_url_generation.py
web/: index.html
web/landing/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/landing/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/landing/app/.well-known/agent.json/: route.ts
web/landing/app/.well-known/ai-plugin.json/: route.ts
web/landing/app/.well-known/mcp.json/: route.ts
web/landing/app/components/: AnimatedSection.tsx  CopyBlock.tsx  CopyButton.tsx  FeaturedSkillsList.tsx  SkillSearch.tsx
web/landing/app/data/: registry.ts  scores.json
web/landing/app/docs/: page.tsx
web/landing/app/llms-full.txt/: route.ts
web/landing/app/llms.txt/: route.ts
web/landing/app/pricing.md/: route.ts
web/landing/app/skill/[...slug]/: page.tsx
web/landing/scripts/: update-scores.mjs
