[project]
name = "skyll"
version = "0.1.1"
description = "Skill discovery for AI agents - search and retrieve agent skills on demand"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Assaf Elovic", email = "assaf@skyll.app" }
]
keywords = ["agent-skills", "llm", "ai", "skills.sh", "mcp", "ai-agents", "skill-discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Client-only dependencies (lightweight)
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
# Full server with REST API and MCP
server = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.2.0",
]
all = [
    "skyll[server,dev]",
]

[project.urls]
Homepage = "https://skyll.app"
Documentation = "https://skyll.app/docs"
Repository = "https://github.com/assafelovic/skyll"
Issues = "https://github.com/assafelovic/skyll/issues"
API = "https://api.skyll.app"

[project.scripts]
skyll-server = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skyll", "src"]

[tool.hatch.build.targets.sdist]
include = [
    "skyll/",
    "src/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
